<resources>
    <string name="app_name">App Atm Consultancy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultancy</string>
    <string name="nav_header_subtitle">atendimento@atmconsultoria.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servico">Services</string>
    <string name="menu_cliente">Clients</string>
    <string name="menu_contato">Contacts</string>
    <string name="menu_sobre">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entre_contato">Entre em Contato</string>
    <string name="quality_management_system">Quality Management System</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut vestibulum mauris. Suspendisse interdum erat neque, quis commodo orci mollis eu. Maecenas faucibus nibh libero, sed vehicula felis accumsan eu. Praesent sit amet malesuada est, dignissim porttitor ante. Nulla cursus erat tortor, a varius orci euismod ut. Mauris mauris nisl, blandit in vehicula non, ullamcorper a nunc. Integer non rutrum orci. Ut pharetra finibus neque, eu euismod lacus suscipit eget. Maecenas tincidunt fermentum nisl, bibendum faucibus massa lacinia ac. Duis quis fermentum sem.</string>
    <string name="performance_indicators">Performance indicators</string>
    <string name="embraer">Embraer</string>
    <string name="natura">Natura</string>
    <string name="amazon">Amazon</string>
    <string name="company_description">In more than 15 years of existence, ATM has accumulated experience in consulting services for national companies of different sizes, having served more than 100 companies since its opening.</string>
    <string name="cielo">Cielo</string>
    <string name="braskem">Braskem</string>
    <string name="gerdau">Gerdau</string>
</resources>