<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_servico"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_servico" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cliente" />
    </group>

    <item android:title="@string/entre_contato">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/menu_contato" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_people"
                android:title="@string/menu_sobre" />
        </menu>
    </item>
</menu>