<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.lvb.courses.app_atm_consultancy.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_servico"
        android:name="com.lvb.courses.app_atm_consultancy.ui.services.ServiceFragment"
        android:label="@string/menu_servico"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.lvb.courses.app_atm_consultancy.ui.clients.ClientsFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.lvb.courses.app_atm_consultancy.ui.contact.ContactFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.lvb.courses.app_atm_consultancy.ui.about.AboutFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_about" />
</navigation>